# met-weather-service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/met_weather_service/: main.py
src/met_weather_service/api/: forecast.py  geocoding.py  health.py  ui.py
src/met_weather_service/core/: config.py  logging.py
src/met_weather_service/services/: forecast.py  geocoder_client.py  geocoder_gateway.py  met_client.py  met_gateway.py  rate_limiter.py
src/met_weather_service/static/: ui.js
src/met_weather_service/templates/: index.html
tests/: conftest.py  test_api_smoke.py  test_forecast_api.py  test_forecast_api_validation.py  test_forecast_include_place.py  test_forecast_missing_ua.py  test_geocoding_api.py  test_iter_met_points.py  test_met_cache_conditional.py  test_met_rate_limit.py  test_met_upstream_error.py  test_ui_smoke.py
