[project]
name = "met-weather-service"
version = "0.1.0"
description = "Test assignment: weather proxy service based on MET Norway API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
