[project]
name = "met-weather-service"
version = "0.1.0"
description = "Test assignment: weather proxy service based on MET Norway API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "tzdata>=2024.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
met_weather_service = ["templates/*.html", "static/*.js"]
